[gd_scene load_steps=6 format=3 uid="uid://bcj5r7ssis5rd"]

[ext_resource type="Script" path="res://rigid_body_2d.gd" id="1_8ckhx"]
[ext_resource type="Texture2D" uid="uid://bix2q7urnc873" path="res://Assets/Inside_E.png" id="2_sup4k"]

[sub_resource type="AtlasTexture" id="AtlasTexture_p0imn"]
atlas = ExtResource("2_sup4k")
region = Rect2(686, 630, 75, 92)

[sub_resource type="SpriteFrames" id="SpriteFrames_2m12b"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_p0imn")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_muvme"]
size = Vector2(59, 93)

[node name="Door" type="RigidBody2D"]
script = ExtResource("1_8ckhx")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_2m12b")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-8.5, 1.5)
shape = SubResource("RectangleShape2D_muvme")

[node name="Label" type="Label" parent="."]
offset_left = -28.0
offset_top = 50.0
offset_right = 12.0
offset_bottom = 73.0
text = "Map"

[connection signal="input_event" from="." to="." method="_on_input_event"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
